# standalone-html

./: LICENSE  README.markdown  standalone-html.cabal  standalone-html.hs
