Name:                standalone-html
Version:             0.1
Synopsis:            Incorporate external dependencies into a single HTML file.
Homepage:            http://github.com/jgm/standalone-html
License:             GPL
License-file:        LICENSE
Author:              John MacFarlane
Maintainer:          jgm@berkeley.edu
Copyright:           Copyright 2011 John MacFarlane
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6
Executable standalone-html
  Main-is:           standalone-html.hs
  Build-depends:     base > 4 && < 5, utf8-string, network, HTTP, base64-bytestring, filepath, bytestring, tagsoup >= 0.12.5, zlib
